--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@mui/icons-material": "^5.16.0",
+    "@mui/lab": "^5.0.0-alpha.171",
     "@mui/material": "^5.16.0",
+    "@mui/x-date-pickers": "^7.9.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
